<resources>
    <string name="app_name">Practice</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="txtpassword">Password</string>
    <string name="txtusername">User Name</string>
    <string name="phone">Phone Number</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="title_activity_signup">Signup</string>

</resources>
