<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="practice.hbk.com.practice.Signup"
    tools:showIn="@layout/activity_signup">

    <LinearLayout
        android:layout_height="495dp"
        android:layout_width="368dp"
        android:orientation="vertical"
        android:background="@color/background"
        xmlns:android="http://schemas.android.com/apk/res/android"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <EditText
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstname" />

        <EditText
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtpassword"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/createaccount"
            android:layout_width="match_parent"
            android:background="@color/button"
            android:text="Create account"
            android:layout_height="wrap_content" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
